<resources>
    <string name="app_name">MisMascotas</string>
    <string name="actionbar_titulo">Mis Mascotas</string>

    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_aceraca_de">Acerca De</string>
    <string name="menu_configurar_cuenta">Configurar Cuenta</string>
    <string name="menu_otra_opcion">Opción</string>

    <string name="tv_contacto_titulo">Contacto</string>
    <string name="et_hit_nombre">Nombre</string>
    <string name="et_hit_email">Email</string>
    <string name="et_hit_mensaje">Mensaje</string>

    <string name="btn_enviar">Enviar</string>

    <string name="mail_no_vacios">Los datos no puedes ser vacíos</string>
    <string name="mail_enviando">Enviando Mensaje</string>
    <string name="mail_espere">Porfavor espere ...</string>
    <string name="mail_enviado">Mensaje enviado</string>
    <string name="mail_subject">Hola</string>

    <string name="tv_about_email">correo: miguel.rodriguez.u@gmail.com</string>
    <string name="tv_about_nombre">Miguel Rodríguez</string>
    <string name="tv_about_descripcion">Hola, soy ingeniero de sistemas y me encanta desarrollar aplicaciones móviles</string>
    
    <string name="et_cuenta_usuario">Escribe tu usuario</string>
    <string name="btn_cuenta_guardar">Guardar Cuenta</string>
    <string name="menu_recibir_notificacion">Recibir Notificaciones</string>
    <string name="msg_recibir_notificaciones">Aún no ha registrado el nombre de usuario de instagram</string>
    <string name="msg_registrar_usuario">El usuario fue registrado correctamente para recibir notificaciones</string>

    <string name="action_perfil">Ver Perfil</string>
    <string name="action_follow">Seguir</string>
    <string name="action_verusuario">Ver Usuario</string>

</resources>
