<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="dev.mrodriguezul.premascota.MainActivity">

    <item android:id="@+id/menu_favoritos"
        android:orderInCategory="100"
        android:icon="@drawable/icons8_hotel"
        android:title="@string/menu_favoritos"
        app:showAsAction="ifRoom"
        android:titleCondensed="@string/menu_favoritos"
        android:visible="true">
    </item>
    <item
        android:id="@+id/menu_contacto"
        android:orderInCategory="101"
        android:title="@string/menu_contacto"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_acerca_de"
        android:orderInCategory="102"
        android:title="@string/menu_aceraca_de"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_configurar_cuenta"
        android:orderInCategory="103"
        android:title="@string/menu_configurar_cuenta"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_recibir_notificacion"
        android:orderInCategory="104"
        android:title="@string/menu_recibir_notificacion"
        app:showAsAction="never" />

</menu>
