<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dev.mrodriguezul.mismascotas.ConfigurarCuenta">

    <include layout="@layout/actionbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/layout_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cuenta_app_tamanio"
            android:textStyle="bold"
            android:textSize="@dimen/cuenta_app_tamanio"
            android:gravity="center"
            android:text="@string/app_name" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_cuenta_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/et_cuenta_usuario" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:text="@string/btn_cuenta_guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/btn_theme"
            android:id="@+id/btn_cuenta_guardar" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
